Bootstrap switch in LM-colors
Former-commit-id: 3338b82bc16235fdbcc2c733bbda04481162d2f8

--- a/landmatrix/static/css/widgets.scss
+++ b/landmatrix/static/css/widgets.scss
@@ -388,3 +388,44 @@ h4 .icon {
 .bootstrap-datetimepicker-widget table th {
   border-radius: 0px !important;
 }
+
+
+/* ==========================================================================
+ *    BOOTSTRAP-SWITCH
+ * ========================================================================== */
+
+/*
+  background: $lm_orange !important;
+}*/
+
+
+.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary,
+.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-primary {
+  color: #fff;
+  background: $lm_green;
+}
+.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-info,
+.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-info {
+  color: #fff;
+  background: $lm_greenaccent1;
+}
+.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-success,
+.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-success {
+  color: #fff;
+  background: $lm_greenaccent2;
+}
+.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-warning,
+.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-warning {
+  background: $lm_orange;
+  color: #fff;
+}
+.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-danger,
+.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-danger {
+  color: #fff;
+  background: red;
+}
+.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-default,
+.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-default {
+  color: #000;
+  background: #eeeeee;
+}
