--- a/landmatrix/static/css/map.css
+++ b/landmatrix/static/css/map.css
@@ -22,7 +22,8 @@
   text-align: center; }
 
 .popover-content {
-  min-width: 180px; }
+  min-width: 180px;
+  font-size: 12px; }
 
 p {
   margin: 0;
@@ -34,7 +35,11 @@ p {
     height: 300px;
 }
 */
+#map {
+  height: 75vh; }
+
 .ol-popup {
+  font-size: 12px;
   position: absolute;
   background-color: white;
   -webkit-filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
@@ -45,6 +50,9 @@ p {
   bottom: 12px;
   left: -50px;
   min-width: 280px; }
+
+.ol-popup > table {
+  margin-bottom: 0px; }
 
 .ol-popup:after, .ol-popup:before {
   top: 100%;
