--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@
                             <li role="presentation"><a href="{% url 'map' %}">
                                 <i class="lm lm-map-marker"></i>{% trans "Map" %}
                             </a></li>
-                            <li role="presentation"><a href="{% url 'app_main' %}">
+                            <li role="presentation"><a href="{% url 'data' %}">
                                 <i class="lm lm-table"></i>{% trans "Data" %}
                             </a></li>
                             <li role="presentation"><a href="{% url 'chart_transnational_deals' %}">
