--- a/templates/start_mock.html
+++ b/templates/start_mock.html
@@ -92,7 +92,7 @@
                                     class="lm-map-marker"></i></span><br>Map
                             </div>
                         </a>
-                        <a href="{% url 'app_main' %}">
+                        <a href="{% url 'data' %}">
                             <div class="col-md-2"><span class="whitecircle"><i class="lm-table"></i></span><br>Data
                             </div>
                         </a>
