--- a/grid/templates/deal-comparison.html
+++ b/grid/templates/deal-comparison.html
@@ -9,7 +9,7 @@
 {% block title %}{% trans "Deal history comparison" %}{% endblock %}
 
 {% block breadcrumb_inner %}
-    <li><a href="{% url 'app_main' %}">{% trans 'Global' %}</a></li>
+    <li><a href="{% url 'data' %}">{% trans 'Global' %}</a></li>
     <li><a href="{% url 'deal_details' deal_id=deal.activity_id %}">{% trans "Deal Details" %}</a></li>
   <li>{% trans "Compare deal history" %}</li>
 {% endblock %}
