--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -8,7 +8,7 @@
 {% block title %}{% trans "Deal" %} #{{ deal.activity_identifier }}{% endblock %}
 
 {% block breadcrumb_inner %}
-    <li><a href="{% url 'app_main' %}">{% trans 'Global' %}</a></li>
+    <li><a href="{% url 'data' %}">{% trans 'Global' %}</a></li>
     <li>{% trans "Deal" %} #{{ deal.activity_identifier }}</li>
 {% endblock %}
 
