--- a/grid/templates/group-by.html
+++ b/grid/templates/group-by.html
@@ -8,7 +8,7 @@
 {% block breadcrumb %}
 <ul class="breadcrumb">
   <li><a href="/">{% trans 'Home' %}</a></li>
-  <li><a href="{% url 'app_main' %}">{% trans 'Global' %}</a></li>
+  <li><a href="{% url 'data' %}">{% trans 'Global' %}</a></li>
   {% if group == "all" %}
   <li>{{ name|capfirst }}</li>
   {% elif filters.group_value %}
