--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -17,7 +17,7 @@
 {% block page_title %}{% trans "Map" %}{% endblock %}
 {% block title %}{% trans "Map" %}{% endblock %}
 {% block breadcrumb_inner %}
-    <li><a href="{% url 'app_main' %}">{% trans "Global" %}</a></li>
+    <li><a href="{% url 'data' %}">{% trans "Global" %}</a></li>
     <li>{% trans "Map" %}</li>
 {% endblock %}
 
