--- a/wagtailcms/templates/widgets/map-data-charts.html
+++ b/wagtailcms/templates/widgets/map-data-charts.html
@@ -4,12 +4,12 @@
 	    	<span class="whitecircle"><i class="lm-map-marker"></i></span><br>Map
 	    </div>
 	</a>
-	<a href="{% url 'app_main' %}">
+	<a href="{% url 'data' %}">
 	    <div class="col-md-2 text-center">
 	    	<span class="whitecircle"><i class="lm-table"></i></span><br>Data
 	    </div>
 	</a>
-	<a href="{% url 'chart_transnational_deals' %}">
+	<a href="{% url 'charts' %}">
 	    <div class="col-md-2 text-center">
 	    	<span class="whitecircle"><i class="lm-bar-chart"></i></span><br>Charts
 	    </div>
