--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -1550,7 +1550,7 @@ img {
 
 #btn-download .popover .popover-content,
 #btn-share .popover .popover-content {
-  width: 234px;
+  width: 321px;
   height: 49px;
   margin: 0;
   padding: 0; }
@@ -1565,13 +1565,13 @@ img {
   text-align: center;
   background: #414141; }
 
-#btn-download .popover .popover-content .btn-media.xml,
-#btn-share .popover .popover-content .btn-media.twitter {
+#btn-download .popover .popover-content .btn-media:first-child,
+#btn-share .popover .popover-content .btn-media:first-child {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px; }
 
-#btn-download .popover .popover-content .btn-media.xls,
-#btn-share .popover .popover-content .btn-media.google-plus {
+#btn-download .popover .popover-content .btn-media:last-child,
+#btn-share .popover .popover-content .btn-media:last-child {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px; }
 
@@ -1589,7 +1589,9 @@ img {
   border-left: 11px solid transparent;
   border-right: 11px solid transparent;
   border-bottom: 10px solid #4a4a4a; }
-
+#btn-download .popover .popover-content .btn-media.csv:before {
+  margin-left: 38px;
+}
 #btn-share .popover .popover-content .btn-media:hover,
 #btn-share .popover .popover-content .btn-media:focus,
 #btn-download .popover .popover-content .btn-media:hover,
