--- a/landmatrix/static/css/widgets.scss
+++ b/landmatrix/static/css/widgets.scss
@@ -175,7 +175,7 @@ img {
 }
 
 /* SHARE */
-#btn-download,
+  #btn-download,
 #btn-share {
   position: relative;
 }
@@ -203,7 +203,7 @@ img {
 
 #btn-download .popover .popover-content,
 #btn-share .popover .popover-content {
-  width: 234px;
+  width: 312px;
   height: 49px;
   margin: 0;
   padding: 0;
@@ -220,13 +220,13 @@ img {
   background: #414141;
 }
 
-#btn-download .popover .popover-content .btn-media.xml,
-#btn-share .popover .popover-content .btn-media.twitter {
+#btn-download .popover .popover-content .btn-media:first-child,
+#btn-share .popover .popover-content .btn-media:first-child {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-#btn-download .popover .popover-content .btn-media.xls,
-#btn-share .popover .popover-content .btn-media.google-plus {
+#btn-download .popover .popover-content .btn-media:last-child,
+#btn-share .popover .popover-content .btn-media:last-child {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
@@ -244,6 +244,9 @@ img {
   border-left: 11px solid transparent;
   border-right: 11px solid transparent;
   border-bottom: 10px solid $lm_dark;
+}
+#btn-download .popover .popover-content .btn-media.csv:before {
+  margin-left: 38px;
 }
 #btn-share .popover .popover-content .btn-media:hover,
 #btn-share .popover .popover-content .btn-media:focus,
