--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,18 @@
                         </ul>
                     </li>
                     {% include "language_chooser.html" %}
-                    {% block user_tools %}{% endblock %}
+                    {% block user_tools %}
+                    {% if request.user.is_authenticated %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false" title="{% trans "Logged in as" %}: {{ user }}"><i class="fa fa-user messages"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'manage' %}">{% trans "Manage" %}</a></li>
+                            <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
+                        </ul>
+                    </li>
+                    {% endif %}
+                    {% endblock %}
                 </ul>
             </div>
         </div>
