Fixed user authentication
Former-commit-id: 1aa655ecfa4dd8557f7f490a562f12ada2e9b3db

--- a/templates/wagtailcms/country.html
+++ b/templates/wagtailcms/country.html
@@ -1,1 +1,4 @@
 {% extends "wagtailcms/wagtail_page.html" %}
+
+{% block page_title %}{% if country %}{{ country }}{% else %}{% if region %}{{ region }}{% else %}{{ page.title }}{% endif %}{% endif %}{% endblock %}
+{% block title %}{% if country %}{{ country }}{% else %}{% if region %}{{ region }}{% else %}{{ page.title }}{% endif %}{% endif %}{% endblock %}
